--- a/appendix_datastructures.tex
+++ b/appendix_datastructures.tex
@@ -46,7 +46,7 @@ Delaunay-Triangulationen bilden per Alpha-Form implizit die globale Oberfläche 
 \section{Beschreibung grundlegender Datenstrukturen}
 \label{appendix_dataoverview}
 
-\begin{figure}[!ht]
+\begin{figure}[b]
   \captionsetup[subfigure]{singlelinecheck=false}{
     \def\subfigwidth{0.23\textwidth}
     \def\svgwidth{\textwidth}
@@ -149,9 +149,7 @@ Mit dem DeWall-Algorithmus\cite{cignoni_dewall:_1998} ist eine Laufzeit von \Big
 Hier wird die Punktmenge in eine höhere Dimension transformiert, in der deren konvexe Hülle berechnet wird, die dann in den ursprünglichen Raum herunter projiziert wird und darin eine gültige Delaunay-Triangulation ergibt.
 Dieser Algorithmus ist von rein akademischem Interesse, wird aber ebenfalls bei Hinzufügung und Aktualisierung von Punkten interessant.
 
-\subsubsection{Flip-Algorithmus}
-
-\begin{figure}[!ht]
+\begin{figure}[b]
   \captionsetup[subfigure]{singlelinecheck=false}{
     \def\subfigwidth{0.23\textwidth}
     \def\svgwidth{\textwidth}
