--- a/appendix_gold.tex
+++ b/appendix_gold.tex
@@ -10,7 +10,7 @@ Zum Zeitpunkt der vollständigen Relaxierung liegt die Dicke der abgeschiedenen 
 
 \vspace{3em}
 
-\begin{figure}[bh]
+\begin{figure}[H]
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{0.49\textwidth}
 
@@ -31,7 +31,7 @@ Zum Zeitpunkt der vollständigen Relaxierung liegt die Dicke der abgeschiedenen 
 
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}[p]
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{0.49\textwidth}
 
@@ -52,7 +52,7 @@ Zum Zeitpunkt der vollständigen Relaxierung liegt die Dicke der abgeschiedenen 
 
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}[p]
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{0.49\textwidth}
 
