--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -65,9 +65,11 @@ Da diese drei Parametersätze, welche von der Arbeitsgruppe um \textsc{S.~M.~Foi
 
 \subsection{Thermodynamische Eigenschaften}
 
-asd Eine Untersuchung der thermodynamischen Eigenschaften der Parametersätze, wie sie auch für die Gold-Parametrisierung durchgeführt wurde (Abschnitt~\ref{goldthermo}), zeigt eine Überschätzung der Schmelztemperatur um ca. \SI{200}{\kelvin}, mit Ausnahme von \pot{cu\_ag\_ymwu.eam.alloy} (Abbildung~\ref{fig:copperthermo}).
-Somit zeigt sich, dass Parametrisierungen für die Beschreibung struktureller Eigenschaften in der Regel keine thermodynamischen Eigenschaften darstellen, oder nur für eine Auswahl von Systemen angepasst wurden.
-Unterhalb von \SI{1000}{\kelvin} stimmen die meisten Dichten mit Referenzwerten überein, die über den linearen Ausdehnungskoeffizienten von $\alpha = \SI{16.5e-6}{\per\kelvin}$\cite{haynes_crc_2011} berechnet wurden.
+Wie für Gold zuvor (Abschnitt~\ref{goldthermo}) wurde auch für die Kupfer-Parametersätze eine Untersuchung der thermodynamischen Eigenschaften durchgeführt.
+Dabei zeigt sich für die die meisten Parametersätze mit Ausnahme von \pot{cu\_ag\_ymwu.eam.alloy} eine Überschätzung der Schmelztemperatur um ca. \SI{200}{\kelvin} (Abbildung~\ref{fig:copperthermo}).
+
+Daran ist die Eigenschaft von MD-Potentialen erkennbar, nach der Parametrisierungen für die Beschreibung struktureller Eigenschaften in der Regel keine thermodynamischen Eigenschaften darstellen.
+Unterhalb von \SI{1000}{\kelvin} stimmen die meisten Dichten mit Referenzwerten überein, die über den linearen Ausdehnungskoeffizienten von $\alpha = \SI{16.5e-6}{\per\kelvin}$\cite{haynes_crc_2011} berechnet wurden, weshalb die geringen Abscheidungstemperaturen von \SI{500}{\kelvin} die Schichteigenschaften nicht verfälschen sollten.
 Die Referenzwerte stammen aus den Referenzen~\cite{haynes_crc_2011,brillo_density_2006} (Siehe Anhang~\ref{appendix_constants}).
 
 \begin{figure}[H]
@@ -135,9 +137,11 @@ Unterschiede liegen in den Auftreffenergien von \SI{5.4}{\electronvolt}, die ebe
 Auch bei Kupfer-PVD zeigt die Simulation epitaktisches Wachstum glatter Schichten (Abbildungen~\ref{fig:copperparsivald-a} und~\ref{fig:copperparsivald-b}), die bei genauer Prüfung zwar keine Gitter-Fehlstellen, aber gelegentlich einzelne Hohlräume mit einem Durchmesser von ca. \SI{1}{\nano\meter} beinhalten.
 Sie bilden sich im Verlauf der Simulation als kraterförmige Vertiefungen auf der Oberfläche, die sich verjüngen, bevor sie von der aufwachsenden Schicht zu Hohlräumen abgeschlossen werden (Abbildung~\ref{fig:coppercrater}).
 
-Betrachtungen der MD-Simulationen für die mit der Kraterbildung verbundenen Ereignisse zeigen, dass bei Ankunft des gesputterten Atomes seine kinetische Energie hauptsächlich an ein anderes Teilchen übertragen wird, das dadurch aus der Oberfläche geschlagen wird.
-Derartige Prozesse werden bei PVD-Prozessen bei höheren Energien erwartet\cite{mattox_handbook_2010}\todo{Ref auf ein besseres Paper?}, doch wurde es für die geringen Teilchenenergien in der Simulation \todo{phrasing}nicht erwartet.
-Untersuchungen der Oberflächenkonfiguration zeigen das Vorkommen perfekt kristalliner Flächen am Abscheidungsort, die sich auch im späteren Simulationsverlauf mit einer geringen Wahrscheinlichkeit bilden können.
+Betrachtungen der MD-Simulationen für die mit der Kraterbildung verbundenen Ereignisse zeigen, dass bei Ankunft des Gasatomes seine kinetische Energie fast vollständig an ein anderes Teilchen übertragen wird, das dadurch aus der Oberfläche geschlagen wird.
+An den betroffenen Abscheidungsorten liegen glatte, perfekt kristalline Oberflächen vor, die sich auch im späteren Simulationsverlauf mit einer geringen Wahrscheinlichkeit bilden können.
+Untersuchungen des Einflusses der Teilchenenergie auf den Sputter-Prozess\cite{zhou_atomistic_1998} haben für glatte Oberflächen eine geringere Wahrscheinlichkeit des Energieaustauches gezeigt als für unebene Oberflächen, doch wurden bei diesen Simulationen Energieminimierungen durchgeführt.
+Die Kraterbildung sollte so eigentlich von einer atomaren Stufe ausgehen, doch wird die Energie in Parsivald-Simulationen bei unebenen Oberflächen scheinbar besser auf die Oberflächenatome aufgeteilt.
+
 Parsivald kann mit herausgeschlagenen Atomen in der aktuellen Version nicht umgehen, weshalb das Ereignis als fehlgeschlagen markiert wird und in den Abbruchraten (Abbildung~\ref{fig:copperworkerdensity-a}) erkennbar sind, die das Verhältnis von fehlgeschlagenen zu ausgewählten Ereignissen beschreiben.
 Die Kraterbildung ist auch in den Rauheiten (Abbildung~\ref{fig:copperparsivald-b}) als leichte Zunahme erkennbar, doch liegt die RMS-Rauheit mit ca. \SI{1.5}{\angstrom} ebenfalls unterhalb der Bindungslänge von \SI{2.556}{\angstrom}.
 %% Es zeigt sich, dass für ein solches Verhalten eine ideale Kristalloberfläche im Umkreis von ca. \SI{3}{\nano\meter} vorhanden sein muss, auf der das Atom direkt zwischen zwei benachbarten Atomen aufkommen muss, damit eines dieser Atome die Energie aufnimmt und an einen Nachbarn abgibt, der dadurch aus der Oberfläche geschlagen wird.
@@ -198,7 +202,7 @@ Deshalb sind Abscheidungssimulationen auf polykristallinen und amorphen Substrat
 Ergänzend ist in Abbildung~\ref{fig:copperworkerdensity-b} ein Histogramm der Zahl paralleler Ereignisse dargestellt, aus der auf die Workerdichte geschlossen werden kann.
 Die Verteilung hat ihren Mittelwert bei $p = \num{6.3}$ mit dem Maximum von aktiven Prozessen bei $p_\text{peak} = \num{13}$, wobei der Hauptprozess bereits zu $p$ gezählt wurde.
 Dem steht eine analytisch ermittelte maximale Zahl von Prozessen mit $p_\text{max} = \num{30}$ gegenüber, die allerdings eine dichte Packung von MD-Boxen auf der Oberfläche voraus setzt.
-Durch die zufällige Auswahl der Ereignisorte und der Bewahrung der Reihenfolge der Ereignisse ergeben sich in Parsivald-Simulationen mittlere Workerdichten von $\rho_\text{worker} = \SI{18.5}{\percent}$\todo{so what?}.
+Durch die zufällige Auswahl der Ereignisorte und der Bewahrung der Reihenfolge der Ereignisse ergeben sich in Parsivald-Simulationen vergleichsweise effiziente Workerdichten von $\rho_\text{worker} = \SI{18.5}{\percent}$.
 
 \begin{figure}
 
