--- a/datastructures.tex
+++ b/datastructures.tex
@@ -73,7 +73,6 @@ Die Ergebnisse der Laufzeit-Analysen der sieben Operationen auf den vorgestellte
 
 \end{table}
 
-\clearpage
 \subsection{Effiziente Datenstrukturen}
 
 Beim Vergleich der Datenstrukturen in Tabelle~\ref{tab:dataruntimes} stellen sich Octrees, k-d-Bäume und Delaunay-Triangulationen als Favoriten für Off-Lattice KMC-Simulationen heraus, die in den folgenden Abschnitten kurz eingehender vorgestellt und diskutiert werden sollen.
@@ -90,7 +89,7 @@ Damit steigt die Adressierungszeit für einzelne Zellen auf \BigO{\log{c}}, doch
 Als Resultat sind für Oberflächensysteme der Speicherbedarf und die Laufzeit von Suchoperationen eines dreidimensionalen Simulationsraumes auf die eines zweidimensionalen Systemes reduziert.
 Theoretisch sind mit Access Caching, Bitweiser Adressierung, Surface Flagging oder Height Mapping noch weitere Anpassungen möglich, allerdings verbessert sich dabei nur der Laufzeitfaktor, nicht die asymptotische Laufzeit, weshalb sie nur am Rand genannt sein sollen.
 
-\begin{figure}
+\begin{figure}[t]
   \centering
   \includegraphics[width=\textwidth]{octree}
   \caption[Veranschaulichung der Funktionsweise eines Octrees]{
@@ -103,14 +102,7 @@ Theoretisch sind mit Access Caching, Bitweiser Adressierung, Surface Flagging od
 \subsection{k-d-Bäume}
 \label{datakdtree}
 
-Für Nachbarschafts- und Bereichssuchen wird wegen ihrer hervorragenden Sucheffizienz oft auf k-d-Bäume zurückgegriffen, die einen kartesischen Raum in orthogonale Zellen mit jeweils einem Atom unterteilen, wodurch sich ein balancierter Binärbaum ergibt, an dessen Knoten die Atome liegen.
-Durch implizite Betrachtung von Abstandsrelationen bei der Konstruktion (Abbildung~\ref{fig:kdtree}) lassen sich Abstands- oder Bereichssuchen in \BigO{\log{n}} durchführen, während Nachbarschaftssuchen von $N$ Atomen in Kombination mit einem Heap in \BigO{\log{n}\log{N}} möglich sind.
-
-Nachteile ergeben sich bei Modifikationen von Atomen, die durch Baumrotation in \BigO{\log{n}} aufgelöst werden müssen und im schlimmsten Fall\footnote{Der schlimmste Fall (engl. \textit{worst case}) besteht in einer Menge von Eingabedaten, die zur größtmöglichen Laufzeit führen} den gesamten Baum neu strukturieren.
-Durch die einseitige, dichte und gleichverteilte Hinzufügung von Atomen während einer Oberflächenabscheidung ist dieser Fall allerdings gegeben, da sich der Median der Atompositionen in z-Richtung stetig verschiebt.
-Deshalb bieten sich k-d-Bäume zwar für allgemeine Suchoperationen in statischen Off-Lattice-Strukturen an, sind aber nicht für effiziente KMC-Simulationen geeignet.
-
-\begin{figure}
+\begin{figure}[b]
   \includegraphics[width=\textwidth]{kdtree-tree}
   \caption[Konstruktion eines k-d-Baumes]{
     Konstruktion eines k-d-Baumes:
@@ -119,18 +111,15 @@ Deshalb bieten sich k-d-Bäume zwar für allgemeine Suchoperationen in statische
   \label{fig:kdtree}
 \end{figure}
 
+Für Nachbarschafts- und Bereichssuchen wird wegen ihrer hervorragenden Sucheffizienz oft auf k-d-Bäume zurückgegriffen, die einen kartesischen Raum in orthogonale Zellen mit jeweils einem Atom unterteilen, wodurch sich ein balancierter Binärbaum ergibt, an dessen Knoten die Atome liegen.
+Durch implizite Betrachtung von Abstandsrelationen bei der Konstruktion (Abbildung~\ref{fig:kdtree}) lassen sich Abstands- oder Bereichssuchen in \BigO{\log{n}} durchführen, während Nachbarschaftssuchen von $N$ Atomen in Kombination mit einem Heap in \BigO{\log{n}\log{N}} möglich sind.
+
+Nachteile ergeben sich bei Modifikationen von Atomen, die durch Baumrotation in \BigO{\log{n}} aufgelöst werden müssen und gelegentlich den gesamten Baum neu strukturieren.
+Durch die einseitige, dichte und gleichverteilte Hinzufügung von Atomen während einer Oberflächenabscheidung ist dieser Fall allerdings gegeben, da sich der Median der Atompositionen in z-Richtung stetig verschiebt.
+Deshalb bieten sich k-d-Bäume zwar für allgemeine Suchoperationen in statischen Off-Lattice-Strukturen an, sind aber nicht für effiziente KMC-Simulationen geeignet.
+
 \subsection{Delaunay-Triangulation}
 \label{datadelaunay}
-
-\begin{figure}
-  \centering
-  \def\svgwidth{\textwidth}
-  \input{img/delaunay.pdf_tex}
-  \caption[Beispiel des Delaunay-Kriteriums]{
-    In der Delaunay-Triangulation (c) einer Punktwolke (a) dürfen sich keine weiteren Punkte im Umkreis jedes Simplexes (b) befinden
-  }
-  \label{fig:delaunay}
-\end{figure}
 
 Eine dritte Partitionsmethode findet sich in der Delaunay-Triangulation\cite{su_comparison_1995}, welche jedoch asymmetrisch und nicht-orthogonal arbeitet, indem die konvexe Hülle der Punktwolke raumfüllend in disjunkte k-dimensionale Simplexe\footnote{Ein $k$-Simplex ist ein Objekt in $k$ Dimensionen mit $k+1$ Eckpunkten, die untereinander mit geraden Kanten verbunden sind. Somit ist ein 1-Simplex eine Linie, ein 2-Simplex ein Dreieck, ein 3-Simplex ein Tetraeder, etc.}
 entsprechend des Delaunay-Kriteriums, nach dem sich im Umkreis eines Simplexes keine anderen Punkte der Punktwolke befinden dürfen, zerlegt wird.
@@ -139,6 +128,16 @@ Die Konstruktion lässt sich im Gegensatz zu den anderen Datenstrukturen für gr
 Eine Liste von Eigenschaften der Simplexe sowie einer Übersicht über die verschiedenen Konstruktionsmethoden ist in Anhang~\ref{appendix_delaunay} zu finden.
 
 Delaunay-Triangulationen werden noch nicht direkt im KMC-Algorithmus für Off-Lattice-Systeme genutzt, doch sind sie aufgrund ihrer Beziehung zu Alpha-Formen für die Analyse von Oberflächen unentbehrlich (Abschnitt~\ref{mdmethods}).
+
+\begin{figure}[H]
+  \centering
+  \def\svgwidth{\textwidth}
+  \input{img/delaunay.pdf_tex}
+  \caption[Beispiel des Delaunay-Kriteriums]{
+    In der Delaunay-Triangulation (c) einer Punktwolke (a) dürfen sich keine weiteren Punkte im Umkreis jedes Simplexes (b) befinden
+  }
+  \label{fig:delaunay}
+\end{figure}
 
 \subsection{Alpha-Form}
 \label{dataalphaform}
@@ -151,7 +150,7 @@ Für Grenzwerte von $\alpha$ ergibt sich für $\alpha \rightarrow \infty$ die ko
 Alpha-Formen beschreiben ebenfalls Hohlräume und Poren innerhalb der Struktur und können für $\alpha \approx r_\text{bond}$ sogar Kristalldefekte lokalisieren, die zuvor per Konnektivitätsprüfung der Alpha-Form von der Oberfläche isoliert werden müssen.
 Dabei sind Anwendungen auf auch periodische und teilperiodische Räume möglich.
 
-\begin{figure}
+\begin{figure}[H]
   \centering
   \captionsetup[subfigure]{singlelinecheck=false}{
     \def\subwidth{0.4\textwidth}
